--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_hooks: ^0.21.3+1
   flutter_form_builder: ^10.2.0
+  form_builder_validators: ^11.2.0
 
 dev_dependencies:
   flutter_test:
